--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-
     <EditText
-        android:id="@+id/titleText"
+        android:id="@+id/etProductName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Наименование" />
+        android:hint="Название товара" />
 
     <EditText
-        android:id="@+id/AuthorText"
+        android:id="@+id/etProductSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="ABTop"
-        android:inputType="textMultiLine" />
+        android:hint="Введите размер товара"
+        android:inputType="text" />
+
+    <ImageView
+        android:id="@+id/ivProductImage"
+        android:layout_width="200dp"
+        android:layout_height="176dp"
+        android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_launcher_foreground" />
 
     <Button
-        android:id="@+id/addButton"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnChooseImage"
+        android:layout_width="364dp"
         android:layout_height="wrap_content"
-        android:text="Добавить книгу"
-        android:layout_marginTop="16dp" />
+        android:backgroundTint="#41EC03"
+        android:text="Добавить картинку" />
 
     <Button
-        android:id="@+id/updateButton"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnAddProduct"
+        android:layout_width="367dp"
         android:layout_height="wrap_content"
-        android:text="Обновить книгу"
-        android:layout_marginTop="16dp" />
+        android:backgroundTint="#41EC03"
+        android:text="Добавить товар" />
 
     <Button
-        android:id="@+id/deleteButton"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnDeleteAllProducts"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:text="Удалить книгу"
-        android:layout_marginTop="16dp" />
+        android:backgroundTint="#FF0000"
+        android:text="Удалить все товары" />
 
-    <ListView
-        android:id="@+id/listView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="16dp" />
-
+        android:layout_weight="1" />
 </LinearLayout>
